tests/compile-fail/validity/dangling_ref2.stderr
error: Undefined Behavior: type validation failed: encountered a dangling reference (going beyond the bounds of its allocation)
 --> $DIR/dangling_ref2.rs:8:29
  |
8 |     let _x: &i32 = unsafe { mem::transmute(ptr) }; //~ ERROR dangling reference (going beyond the bounds of its allocation)
  |                             ^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a dangling reference (going beyond the bounds of its allocation)
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/dangling_ref2.rs:8:29

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

